--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
     <!-- Header -->
     <div class="head">
         <header>
-            <h1>Huffman Algorithm</h1>
+            <div class="main">
+                <h1>Huffman Algorithm</h1>
+            </div>
             
-            <div>
+            <div style="margin-top: 4%;">
                 <button>Text</button>
                 <button>IMG</button> 
             </div>
@@ -24,6 +26,11 @@
         </header>
     </div>
     
+    <div class="text">
+        <form>
+            <textarea name="input" class="input"></textarea>
+        </form>
+    </div>
 
 </body>
 </html>
