--- a/index.html
+++ b/index.html
@@ -32,5 +32,11 @@
         </form>
     </div>
 
+    <div>
+        <footer style="text-align: center;">
+            <h3>Did you like our service?</h3>
+            <p style="font-size: 10px;">pls give us 100%</p>
+        </footer> 
+    </div>
 </body>
 </html>
