--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div>
         <footer style="text-align: center;">
             <h3>Did you like our service?</h3>
-            <p style="font-size: 10px;">pls give us 100%</p>
+            <p style="font-size: 10px; color: white;">pls give us 100%</p>
         </footer> 
     </div>
 </body>
