--- a/index.html
+++ b/index.html
@@ -26,14 +26,20 @@
         </header>
     </div>
     
-    <div class="text">
+    <div class="textin">
         <form>
             <textarea name="input" class="input"></textarea>
         </form>
     </div>
 
+    <div class="textin">
+        <form>
+            <textarea name="output" class="output"></textarea>
+        </form>
+    </div>
+        
     <div>
-        <footer style="text-align: center;">
+        <footer style="text-align: center;" >
             <h3>Did you like our service?</h3>
             <p style="font-size: 10px; color: white;">pls give us 100%</p>
         </footer> 
