--- a/index.html
+++ b/index.html
@@ -65,8 +65,9 @@
 
     <div class="imgin" id="imgin">
         <form action="/action_page.php">
-            <input type="file" id="img" name="img" accept="image/*">
-        </form>
+            <input type="file" id="myFile" name="filename">
+            <input type="submit">
+          </form>
     </div>
     
     
