--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <!-- JS -->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="/back/swap.js"></script>
-    <script src="back/imgscript.js"></script>
+    <script src="/back/imgscript.js"></script>
+    <script src="/back/imgcom.js"></script>
     <script src="https://kit.fontawesome.com/d0546e91ef.js" crossorigin="anonymous"></script>
 
     <title></title>
@@ -73,10 +74,11 @@
 
     <div class="imgin">
         <div class="file-upload">
+            
             <button class="file-upload-btn" type="button" onclick="$('.file-upload-input').trigger( 'click' )">Add Image</button>
       
                 <div class="image-upload-wrap">
-                    <input class="file-upload-input" type='file' onchange="readURL(this);" accept="image/*" />
+                    <input id="img-input" class="file-upload-input" type='file' onchange="readURL(this);" accept="image/*" />
 
                         <div class="drag-text">
                             <h3>Add Your Image</h3>
