--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 <img class="file-upload-image" src="#" alt="your image" />
 
                     <div class="image-title-wrap">
-                        <button type="button" onclick="removeUpload()" class="remove-image">Remove <span class="image-title">Uploaded Image</span></button>
+                        <a href="" download><button type="button" onclick="removeUpload()" class="remove-image">Download</button></a>
                     </div>
 
             </div>
