--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="/back/swap.js"></script>
     <script src="/back/imgscript.js"></script>
+    <script src="/back/image.js"></script>
     <script src="https://kit.fontawesome.com/d0546e91ef.js" crossorigin="anonymous"></script>
 
     <title></title>
@@ -84,13 +85,22 @@
                             <h3>Add Your Image</h3>
                         </div>
 
+                        <!-- <button onclick="process()">test</button> -->
                 </div>
+
+                <!-- <div>
+                    <img id="test" />
+                </div> -->
+
+                <!-- <div class="image-title-wrap">
+                    <a href="scrEncoded" download><button type="button" onclick="removeUpload()" class="remove-image">Download</button></a>
+                </div> -->
 
             <div class="file-upload-content">
                 <img class="file-upload-image" src="#" alt="your image" />
 
                     <div class="image-title-wrap">
-                        <a href="" download><button type="button" onclick="removeUpload()" class="remove-image">Download</button></a>
+                        <a href="your image" download><button id="dowload" type="button" onclick="removeUpload()" class="remove-image">Download</button></a>
                     </div>
 
             </div>
@@ -103,9 +113,9 @@
 
     <!-- Footer -->
     <div>
-        <footer  style="background-color: rgb(59, 59, 59);">
+        <footer  style="background-color: rgb(59, 59, 59); height: 100px">
             <div style="text-align: center;">
-                <h3 style="color: rgb(255, 255, 255); margin-top: 1%;">Is our service convenient?</h3>
+                <h3 style="color: rgb(255, 255, 255);">Is our service convenient?</h3>
                 
 
                 <!-- иконки -->
