--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
     <!-- JS -->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="/back/swap.js"></script>
-    <script src="/back/imgscript.js"></script>
-    <script src="/back/image.js"></script>
+    <script src="/back/ForImg/imgscript.js"></script>
+    <script src="/back/ForImg/image.js"></script>
+    <script src="/back/ForImg/download.js"></script>
     <script src="https://kit.fontawesome.com/d0546e91ef.js" crossorigin="anonymous"></script>
 
     <title></title>
@@ -82,7 +83,7 @@
                 <img class="file-upload-image" src="#" alt="your image" />
 
                     <div class="image-title-wrap">
-                        <a href="" download><button id="dowload" type="button" onclick="removeUpload()" class="remove-image">Download</button></a>
+                        <a id='download-image' download=""><button id="dowload" type="button" onclick="removeUpload()" class="remove-image">Download</button></a>
                     </div>
 
             </div>
