--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <!-- JS -->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <script src="../back/swap.js"></script>
+    <script src="../js/swap.js"></script>
     <script src="../back/ForImg/imgscript.js"></script>
     <script src="../back/ForImg/image.js"></script>
     <script src="../back/ForImg/download.js"></script>
