--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 
     <!-- JS -->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <script src="./js/swap.js"></script>
-    <script src="./back/ForImg/imgscript.js"></script>
-    <script src="./back/ForImg/image.js"></script>
-    <script src="./back/ForImg/download.js"></script>
+    <script src="./back/ForImg/swap.js"></script>
+    <!-- <script src="../back/ForImg/imgscript.js"></script>
+    <script src="../back/ForImg/image.js"></script>
+    <script src="../back/ForImg/download.js"></script> -->
     <script src="https://kit.fontawesome.com/d0546e91ef.js" crossorigin="anonymous"></script>
 
     <title></title>
@@ -132,5 +132,5 @@
     </div>
 
 </body>
-    <script type='module' src='/js/index.js'></script>
+    <script type='module' src='./js/index.js'></script>
 </html>
