--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
     <meta name="author" content="Nguetseng STephane">
     <meta name="viewport" content="width=device-width, height=device-height, minimum-scale=1.0, initial-scale=1, maximum-scale=3 user-scalable=no">
     <!-- CSS -->
-    <link rel="stylesheet" href="./front/main.css">
-    <link rel="stylesheet" href="./front/imgstyle.css">
-    <link rel="stylesheet" href="./front/css/index.css" media="all">
+    <link rel="stylesheet" href="../front/main.css">
+    <link rel="stylesheet" href="../front/imgstyle.css">
+    <link rel="stylesheet" href="../front/css/index.css" media="all">
 
     <!-- JS -->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <script src="./back/ForImg/swap.js"></script>
-    <!-- <script src="../back/ForImg/imgscript.js"></script>
+    <script src="../back/swap.js"></script>
+    <script src="../back/ForImg/imgscript.js"></script>
     <script src="../back/ForImg/image.js"></script>
-    <script src="../back/ForImg/download.js"></script> -->
+    <script src="../back/ForImg/download.js"></script>
     <script src="https://kit.fontawesome.com/d0546e91ef.js" crossorigin="anonymous"></script>
 
     <title></title>
@@ -132,5 +132,5 @@
     </div>
 
 </body>
-    <script type='module' src='./js/index.js'></script>
+    <script type='module' src='/js/index.js'></script>
 </html>
