--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <meta name="author" content="Nguetseng STephane">
     <meta name="viewport" content="width=device-width, height=device-height, minimum-scale=1.0, initial-scale=1, maximum-scale=3 user-scalable=no">
     <!-- CSS -->
-    <link rel="stylesheet" href="/front/main.css">
-    <link rel="stylesheet" href="/front/imgstyle.css">
-    <link rel="stylesheet" href="/front/css/index.css" media="all">
+    <link rel="stylesheet" href="front/main.css">
+    <link rel="stylesheet" href="front/imgstyle.css">
+    <link rel="stylesheet" href="front/css/index.css" media="all">
 
     <!-- JS -->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
