--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
     <link rel="stylesheet" href="front/css/index.css" media="all">
 
     <!-- JS -->
-    <script src="../back/script.js"></script>
+    <script src="back/script.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <script src="../back/swap.js"></script>
-    <script src="../back/ForImg/imgscript.js"></script>
-    <script src="../back/ForImg/image.js"></script>
-    <script src="../back/ForImg/download.js"></script>
+    <script src="back/swap.js"></script>
+    <script src="back/ForImg/imgscript.js"></script>
+    <script src="back/ForImg/image.js"></script>
+    <script src="back/ForImg/download.js"></script>
     <script src="https://kit.fontawesome.com/d0546e91ef.js" crossorigin="anonymous"></script>
 
     <title></title>
@@ -133,5 +133,5 @@
     </div>
 
 </body>
-    <script type='module' src='/js/index.js'></script>
+    <script type='module' src='js/index.js'></script>
 </html>
