--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <!-- Ввод -->
                 
                 <div class="input">
-                    <h3 style="color: white;">Input/Output</h3>
+                    <h3 style="color: white; font-size: 2rem;">Input/Output</h3>
                     <textarea name="input" id='message_box' class="in" style="height: 250px;"></textarea>
                 </div>
                 
