--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <script src="js/widgets/snackbar.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="back/swap.js"></script>
-    <script src="js/secondviewSlide.js"></script>
+    <script src="js/modules/secondviewSlide.js"></script>
     <script src="back/ForImg/imgscript.js"></script>
     <script src="back/ForImg/image.js"></script>
     <script src="back/ForImg/download.js"></script>
