--- a/index.html
+++ b/index.html
@@ -15,13 +15,10 @@
 
     <!-- JS -->
     <script src="back/script.js"></script>
-    <script src="js/widgets/snackbar.js"></script>
+    <script src="js/snackbar.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="back/swap.js"></script>
     <script src="js/secondviewSlide.js"></script>
-    <script src="back/ForImg/imgscript.js"></script>
-    <script src="back/ForImg/image.js"></script>
-    <script src="back/ForImg/download.js"></script>
     <script src="https://kit.fontawesome.com/d0546e91ef.js" crossorigin="anonymous"></script>
 
     <title></title>
