--- a/index.html
+++ b/index.html
@@ -16,9 +16,11 @@
     <!-- JS -->
     <script src="back/script.js"></script>
     <script src="js/snackbar.js"></script>
+    <script src="js/widgets/snackbar.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="back/swap.js"></script>
     <script src="js/secondviewSlide.js"></script>
+    <script src="js/modules/secondviewSlide.js"></script>
     <script src="https://kit.fontawesome.com/d0546e91ef.js" crossorigin="anonymous"></script>
 
     <title></title>
